Finally got scolling problem fixed but not anohter issue arise which is text behind top nav

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -30,7 +30,6 @@ body {
   width: 100%;
   text-align: center;
   height: 100ex;
-  padding: 62px 0px 0px 0px;
 }
 #a {
   min-height: 4rem;
